# rinha

./: .gitignore  Cargo.toml  Dockerfile  main.hvm  run.sh  std.hvm
.cargo/: config.toml
src/: codegen.rs  compiler.rs  expr.rs  json.rs  main.rs  parser.rs
test_files/: list.json  ll.rinha  tco.json  tco.rinha  test.json
