[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cranelift = "0.99.1"
cranelift-jit = "0.99.1"
cranelift-module = "0.99.1"
cranelift-native = "0.99.1"
winnow = "0.5.15"
